# mpi-benchmarks

./: CMakeLists.txt  README.md
cmake/: Doxyfile.in  Doxygen.cmake
config/: cluster.conf.example
scripts/: build.sh
src/example_01_hello/: CMakeLists.txt  README.md  main.c  run.slurm
src/example_02_pingpong/: CMakeLists.txt  README.md  main.c  run_1node.slurm  run_2nodes.slurm
